<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".ui.activities.MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher" />

    <WebView
        android:id="@+id/welcome_anim_gif"
        android:layout_width="480dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        android:layout_marginTop="20dp"
        android:minHeight="240dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <!-- Large Buttons -->
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="160dp"
    app:layout_constraintBottom_toBottomOf="parent"
    >
    <Button
        android:id="@+id/button_war_game"
        style="@style/PrimaryButton"
        android:layout_width="125dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:drawableLeft="@drawable/war_game32"
        android:text="@string/button_war_game"
        app:layout_constraintHorizontal_bias="0.072"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button_pokemon"
        android:layout_width="125dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:drawableLeft="@drawable/pokeball32"
        android:text="@string/button_catch_em_all"
        android:textSize="10sp"
        android:layout_centerHorizontal="true"
        app:layout_constraintHorizontal_bias="0.057"
        app:layout_constraintVertical_bias="0.969" />


    <Button
        android:id="@+id/button_catch_em_all"
        style="@style/PrimaryButton"
        android:layout_width="125dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/button_meme"
        android:drawableStart="@drawable/photography"
        android:layout_alignParentEnd="true"
        app:layout_constraintVertical_bias="1.0" />





    <!-- Small Buttons -->

    <Button
        android:id="@+id/button_tic_tac_toe"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:drawableLeft="@drawable/tic_tac_toe32"
        android:text="@string/button_tic_tac_toe"
        android:textSize="10sp"
        app:layout_constraintHorizontal_bias="0.057"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.969" />

    <Button
        android:id="@+id/button_scoreboard"
        android:layout_width="109dp"
        android:layout_height="60dp"
        android:layout_marginBottom="8dp"
        android:drawableLeft="@drawable/cup24"
        android:text="@string/button_scoreboard"
        android:textSize="10sp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        app:layout_constraintVertical_bias="0.969" />

    <Button
        android:id="@+id/buttonLang"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:drawableLeft="@drawable/lang"
        android:text="@string/button_language"
        android:textSize="10sp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintHorizontal_bias="0.942"

        app:layout_constraintVertical_bias="0.969" />
</RelativeLayout>
</android.support.constraint.ConstraintLayout>