<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".ui.activities.TicTacToeActivity">

    <com.example.naidich.tom.tomsprojectapplication.ui.utils.BoardView
        android:id="@+id/board"
        android:layout_width="match_parent"
        android:layout_height="493dp"
        android:layout_centerInParent="true"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/button_back" />

    <Button
        android:id="@+id/button_new_game"
        style="@style/PrimaryButton"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="6dp"
        android:drawableLeft="@drawable/new_game24"
        android:text="@string/new_game"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button_back"
        android:layout_width="102dp"
        android:layout_height="40dp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="6dp"
        android:drawableLeft="@drawable/back24"
        android:text="@string/back"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/tic_tac_toe"
        android:textColor="#D2E651"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/board"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>