<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark">



        <LinearLayout
            android:id="@+id/tlay"
            android:layout_marginTop="15dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true">

            <EditText
                android:id="@+id/editText1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:imeOptions="actionNext"
                android:maxLines="1"
                android:singleLine="true"
                android:textColorHint="@color/colorAccentLight"
                android:hint="@string/top_text"/>

            <EditText
                android:id="@+id/editText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:imeOptions="actionDone"
                android:maxLines="1"
                android:singleLine="true"
                android:textColorHint="@color/colorAccentLight"
                android:hint="@string/bottom_text"/>

            <Button
                android:id="@+id/go_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/try_text"/>

        </LinearLayout>
        <Button
            android:id="@+id/load_from_drw_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:layout_above="@+id/blay"
            android:text="@string/load_one"/>

        <LinearLayout
            android:id="@+id/blay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:orientation="horizontal"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:weightSum="2">


            <Button
                android:id="@+id/load_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="@string/load_text"/>

            <Button
                android:id="@+id/save_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"

                android:layout_weight="1"
                android:text="@string/save_text"/>

            <!--Button
                android:id="@+id/share_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="@string/share_text"/-->

        </LinearLayout>
       <RelativeLayout
           android:id="@+id/lay"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:layout_marginStart="10dp"
           android:layout_marginEnd="10dp"
           android:layout_above="@+id/blay"
           android:layout_below="@+id/tlay"
           android:layout_centerInParent="true">

           <ImageView
               android:id="@+id/imageView"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:scaleType="fitXY"/>

           <TextView
               android:id="@+id/textView1"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="10dp"
               android:layout_alignParentTop="true"
               android:layout_centerHorizontal="true"
               android:gravity="center"
               android:textSize="40dp"
               android:textColor="@color/colorPrimary"/>
           <TextView
               android:id="@+id/textView2"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginBottom="10dp"
               android:layout_alignParentBottom="true"
               android:layout_centerHorizontal="true"
               android:gravity="center"
               android:textSize="40dp"
               android:textColor="@color/colorPrimary"/>
       </RelativeLayout>
        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_centerInParent="true"/>
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>